Code editor: Fix advanced edit text drop downs being cut off when used in a dialog window

--- a/src/css/form.scss
+++ b/src/css/form.scss
@@ -1,6 +1,7 @@
 dialog {
     border: 1px solid black;
     box-shadow: 3px 3px 5px #535353;
+    overflow: visible;
 }
 
 .dialog-header {
